expr/test/corpus/increment-or-io.txt
==================================
$IO as system variable
==================================
 $IO
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)))))

==================================
$I without parentheses is $IO
==================================
 $I
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)))))

==================================
$IO case insensitive
==================================
 $io
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)))))

==================================
$IO in expression
==================================
 $IO=""
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)))
    (binary_operator)
    (string_literal)))

==================================
$INCREMENT with local variable
==================================
 $INCREMENT(counter)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))))))

==================================
$I with parentheses is $INCREMENT
==================================
 $I(x)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))))))

==================================
$INCREMENT with increment value
==================================
 $INCREMENT(counter,1)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (numeric_literal))))))

==================================
$INCREMENT with negative increment
==================================
 $INCREMENT(counter,-1)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (numeric_literal))))))

==================================
$INCREMENT with decimal increment
==================================
 $INCREMENT(total,0.5)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (numeric_literal))))))

==================================
$INCREMENT with global variable
==================================
 $INCREMENT(^counter)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (gvn)))))))

==================================
$INCREMENT with subscripted global
==================================
 $INCREMENT(^data(id,"count"))
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (gvn
              (subscripts
                (expression
                  (glvn
                    (lvn
                      (objectscript_identifier))))
                (expression
                  (string_literal))))))))))

==================================
$INCREMENT with subscripted local
==================================
 $INCREMENT(arr(key))
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier)
              (subscripts
                (expression
                  (glvn
                    (lvn
                      (objectscript_identifier))))))))))))

==================================
$INCREMENT with object property
==================================
 $INCREMENT(obj.Counter)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (oref_chain_expr
            (lvn
              (objectscript_identifier))
            (property_name)))))))

==================================
$INCREMENT with variable increment value
==================================
 $INCREMENT(counter,step)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))))))

==================================
$INCREMENT case insensitive
==================================
 $increment(x)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))))))

==================================
$INCREMENT with null string (reset)
==================================
 $INCREMENT("")
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (string_literal))))))

==================================
$INCREMENT in expression
==================================
 $INCREMENT(seq)>100
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))))
    (binary_operator)
    (numeric_literal)))

==================================
$I shorthand with increment
==================================
 $I(n,5)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (numeric_literal))))))

==================================
$INCREMENT with expression as increment
==================================
 $INCREMENT(counter,base*2)
---

(source_file
  (expression
    (system_defined_function
      (built_in_function_increment_or_io
        (built_in_function_name)
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier))))
        (function_argument
          (glvn
            (lvn
              (objectscript_identifier)))
          (binary_operator)
          (numeric_literal))))))
